pgbconsole (current development) unstable; urgency=low

  * Add pg_stat_user_tables, pg_stat_user_indexes screens.
  * Add pg_stat_replication screen, add screens sort order saved between
    screen switches.
  * Add column sort reordering with arrow keys.
  * Move query_context to screen_s struct, add order_key, order_desc params
    into screen_s. It allows store sort order info per screen.
  * Rename conn_opts_struct struct to screen_s, because struct used not only for
    connections.
  * Change pg_stat_database to normal output (changes per sec).
  * Add arrays sorting comparing functions.
  * Add pg_stat_database simple output.
  * Add console switching ability.
  * Add title (progname, current time), cpu usage, load average output.
  * Add ncurses, libpq.
 
 -- Alexey Lesovsky <lesovsky@gmail.com>  Sun, 24 May 2015 22:37:07 +0500
