@@ -1,5 +1,7 @@
 pgbconsole (current development) unstable; urgency=low
 
+  * Add pg_statio_user_tables screen, join pg_statio_user_indexes to
+    pg_stat_user_indexes screen.
   * Add pg_stat_user_tables, pg_stat_user_indexes screens.
   * Add pg_stat_replication screen, add screens sort order saved between
     screen switches.
